--- a/app/public/home.html
+++ b/app/public/home.html
@@ -22,11 +22,11 @@
             <hr class="my-4">
             <p>Answer a few basic questions.</p>
             <p>Then find the friend with the greatest compatibility!</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Start Survey!</a>
+            <a class="btn btn-primary btn-lg" href="./survey.html" role="button">Start Survey!</a>
         </div>
 
         <style>
-            .h1 <font
+            .h1 text
         </style>
 
 
